# simple-axum-google-oauth

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  readme.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: config.rs  error.rs  main.rs  model.rs  response.rs
src/routes/: callback.rs  login.rs  mod.rs  profile.rs
src/utils/: decode.rs  encode.rs  google.rs  mod.rs  rand_pw.rs
