[package]
name = "simple-axum-google-oauth"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

# Backend
axum = { version = "0.6.18", features = ["json", "query"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
cookie = "0.17.0"

# Http client
reqwest = { version = "0.11.18", features = ["json"] }

# Env
dotenvy = "0.15.7"

# Time
chrono = "0.4.26"

# Database
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }

# Authentication
oauth2 = "4.4.1"
jsonwebtoken = "8.3.0"

# Serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
http-serde = "1.1.2"

# Error handling
thiserror = "1.0.40"
rand = "0.8.5"
